# TFG_Genover_v4.0

./: README.md
ArnauGenover_TFG/: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  ship_broker.db  tox.ini
ArnauGenover_TFG/.github/: ISSUE_TEMPLATE.md
ArnauGenover_TFG/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ArnauGenover_TFG/src/: ship_broker.db
ArnauGenover_TFG/src/ArnauGenover_TFG/: __init__.py  cli.py
ArnauGenover_TFG/src/ship_broker/: config.py  init_db.py  main.py  ship_broker.db
ArnauGenover_TFG/src/ship_broker/api/: __init__.py  dependencies.py
ArnauGenover_TFG/src/ship_broker/api/routes/: __init__.py  auctions.py  auth.py  cargoes.py  email_processing.py  matching.py  search.py  test.py  vessels.py
ArnauGenover_TFG/src/ship_broker/core/: __init__.py  auction_background.py  auction_service.py  cargo_tracker.py  database.py  email_parser.py  matcher.py  openai_helper.py  scheduler.py  schemas.py  vessel_tracker.py
ArnauGenover_TFG/src/ship_broker/web/static/css/: style.css
ArnauGenover_TFG/src/ship_broker/web/static/js/: main.js
ArnauGenover_TFG/src/ship_broker/web/templates/: auctions.html  base.html  cargoes.html  index.html  login.html  register.html  status.html  vessels.html
ArnauGenover_TFG/tests/: __init__.py  conftest.py  test_ArnauGenover_TFG.py  test_vessel_tracker.py
