[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ArnauGenover_TFG"
version = "0.1.0"
description = "This project optimizes large cargo vessel operations to reduce fuel and CO2 emissions by improving voyage utilization. By automating the matching of ships and cargo using broker emails and data from maritime platforms, we aim to reduce empty voyages and enhance route efficiency, enabling more sustainable and profitable shipping practices."
readme = "README.rst"
authors = [
  {name = "Arnau Genover", email = "arnaugb2003@gmail.com"}
]
maintainers = [
  {name = "Arnau Genover", email = "arnaugb2003@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ArnauGenover/ArnauGenover_TFG/issues"
changelog = "https://github.com/ArnauGenover/ArnauGenover_TFG/blob/master/changelog.md"
homepage = "https://github.com/ArnauGenover/ArnauGenover_TFG"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

